--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -12,6 +12,7 @@
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
   <script src="https://kit.fontawesome.com/575d6668e6.js" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/b2a350ce67.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/487ca4ead0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
